# parsort

./: LICENSE  README.md  default_config.yml  pyproject.toml
src/parsort/: cli.py  config.py  log.py  preview.py  sorter.py  undo.py  xdg.py
